--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.487.0",
+    "mysql2": "^3.14.2",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
