--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroui/theme": "2.4.12",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
@@ -36,7 +37,9 @@
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
-    "react-icons": "^5.5.0"
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
