feat: Add authentication system with API integration and localStorage fallback

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_EXTERNAL_API_BASE_URL=http://13.204.148.32/api/
+NEXT_PUBLIC_EXTERNAL_API_BASE_URL=http://13.204.148.32
+NEXT_PUBLIC_USE_EXTERNAL_API=true
+NEXT_PUBLIC_APP_NAME=PedalNepal
