--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.487.0",
     "mysql2": "^3.14.2",
-    "next": "15.0.4",
+    "next": "^15.5.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
